# vismut-editor

./: .gitignore  Cargo.toml  README.md
editor/: components.json  nuxt.config.ts  package-lock.json  package.json
editor/app/: app.vue
editor/app/assets/css/: index.css  tailwind.css
editor/app/components/: ComponentPanel.vue
editor/app/components/editor/: VismutFileExplorer.vue  VismutHeader.vue  VismutNodeExplorer.vue
editor/app/components/editor/displays/: FileDisplay.vue  NodeDisplay.vue
editor/app/components/editor/graph/: VismutConnection.vue  VismutNode.vue  VismutSocket.vue
editor/app/components/ui/menubar/: Menubar.vue  MenubarCheckboxItem.vue  MenubarContent.vue  MenubarItem.vue  MenubarLabel.vue  MenubarRadioItem.vue  MenubarSeparator.vue  MenubarShortcut.vue  MenubarSubContent.vue  MenubarSubTrigger.vue  MenubarTrigger.vue
editor/app/components/ui/resizable/: ResizableHandle.vue  ResizablePanelGroup.vue
editor/app/components/ui/scroll-area/: ScrollArea.vue  ScrollBar.vue
editor/app/components/ui/skeleton/: Skeleton.vue
editor/app/components/ui/tabs/: Tabs.vue  TabsContent.vue  TabsList.vue  TabsTrigger.vue
editor/app/composables/: useDragAndDrop.ts  useHeader.ts
editor/app/layouts/: default.vue
editor/app/pages/: index.vue
editor/app/stores/: editor.ts
editor/app/utils/: editor.ts  types.ts
src/: config.rs  main.rs  state.rs
src/database/: mod.rs  script.rs
src/database/models/: mod.rs  script.rs
src/requests/: common.rs  mod.rs  script.rs
src/responses/: common.rs  mod.rs  script.rs
src/routes/: console.rs  files.rs  mod.rs  schema.rs
static/: openapi.yaml
