[package]
name = "vismut-editor"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/justxale/vismut-editor"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros"] }
sea-orm = { version = "2.0.0-rc.37", default-features = false, features = ["entity-registry", "macros", "runtime-tokio-native-tls", "schema-sync", "sqlite-use-returning-for-3_35", "sqlx-sqlite", "with-chrono", "with-uuid"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "timeout", "trace"] }
dotenvy = "0.15.7"
tower = "0.5.3"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
chrono = { version = "0.4.44", features = ["now", "serde"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
vismut-core = { git = "https://github.com/justxale/vismut-core.git", version = "0.1.0", features = ["nodes", "serde"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
